--- a/src/main/resources/templates/email_form.html
+++ b/src/main/resources/templates/email_form.html
@@ -3,15 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <title>주문 조회</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .form-container {
+            background-color: #eeeeee;
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 500px;
+        }
+
+        .form-container h1 {
+            margin-bottom: 20px;
+            font-size: 1.5em;
+        }
+
+        .form-container input[type="email"] {
+            width: 100%;
+            padding: 12px;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            font-size: 1em;
+            box-sizing: border-box;
+        }
+
+
+        .form-container button {
+            padding: 12px 24px;
+            background-color: #444444;
+            border: none;
+            color: white;
+            border-radius: 8px;
+            font-size: 1em;
+            cursor: pointer;
+        }
+
+        .form-container button:hover {
+            background-color: #2f2f2f;
+        }
+    </style>
 </head>
 <body>
-<h1>주문 조회</h1>
 
-<form th:action="@{/orders}" method="get">
-    <label for="email">이메일:</label>
-    <input type="email" id="email" name="email" required>
-    <button type="submit">조회하기</button>
-</form>
+<div class="form-container">
+    <h1>주문 내역 조회</h1>
+    <form th:action="@{/orders}" method="get">
+        <label for="email">이메일</label><br/>
+        <input type="email" id="email" name="email" required><br/>
+        <button type="submit">조회하기</button>
+    </form>
+</div>
 
 </body>
 </html>
