--- a/src/main/resources/templates/view_orders.html
+++ b/src/main/resources/templates/view_orders.html
@@ -93,6 +93,7 @@
   <h1 th:text="${email != null} ? ${email} + '님의 주문 내역' : '주문 내역'">주문 내역</h1>
 
   <form class="search-form" th:action="@{/orders/id}" method="get">
+    <input type="hidden" name="email" th:value="${email}"/>
     <input type="number" name="orderId" placeholder="주문 ID" required>
     <button type="submit">조회</button>
   </form>
