--- a/src/main/resources/templates/view_createProduct.html
+++ b/src/main/resources/templates/view_createProduct.html
@@ -73,7 +73,7 @@
 <div class="form-wrapper">
   <h2>상품 등록</h2>
 
-  <form  action="/product" method="post" enctype="multipart/form-data">
+  <form  action="/products" method="post" enctype="multipart/form-data">
     <table>
       <tr>
         <td>상품명</td>
