--- a/src/main/resources/templates/findOrderDetailForm.html
+++ b/src/main/resources/templates/findOrderDetailForm.html
@@ -113,7 +113,7 @@
       </div>
       <div class="btn-group text-end">
         <a href="#" class="btn btn-dark">목록으로</a>
-        <a href="#" class="btn btn-dark">주문 수정</a>
+        <a th:href="@{/orders/update/{orderId}(orderId=${orderId})}" class="btn btn-dark">주문 수정</a>
         <a href="#" class="btn btn-dark">주문 취소</a>
       </div>
     </div>
