:recycle: refactor: 주문 수정 버튼 우측 정렬

--- a/src/main/resources/templates/view_update_orderForm.html
+++ b/src/main/resources/templates/view_update_orderForm.html
@@ -98,7 +98,7 @@
         </tr>
         </tbody>
       </table>
-      <div class="btn-group text-end">
+      <div class="d-flex justify-content-end mt-3">
         <button type="button" class="btn btn-dark" onclick="updateOrder()">주문 수정</button>
       </div>
     </div>
