--- a/src/main/resources/templates/view_update_orderForm.html
+++ b/src/main/resources/templates/view_update_orderForm.html
@@ -117,7 +117,10 @@
         </div>
       </div>
       <div class="btn-group text-end">
-        <a href="#" class="btn btn-dark">목록으로</a>
+        <a th:href="@{/orders/email(email=${orderDetail.email})}"
+           class="btn btn-dark">
+          목록으로
+        </a>
         <a href="#" class="btn btn-dark">주문 취소</a>
       </div>
     </div>
