--- a/src/main/resources/templates/view_update_order.html
+++ b/src/main/resources/templates/view_update_order.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>주문 상세 조회 - 수정</title>
+  <title>주문 내역 수정</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
@@ -48,7 +48,7 @@
 </head>
 <body class="container-fluid">
 <div class="row justify-content-center my-4">
-  <h1 class="text-center">주문 상세 조회 - 수정</h1>
+  <h1 class="text-center">주문 내역 수정</h1>
 </div>
 
 <div class="card mb-4" data-order-id="${orderDetail.id}">
