:sparkles: feat: 주문 생성 페이지, 주문 조회 페이지 연결

--- a/src/main/resources/templates/view_save_orders.html
+++ b/src/main/resources/templates/view_save_orders.html
@@ -108,9 +108,7 @@
           </li>
         </th:block>
       </ul>
-      <button class="btn btn-dark" th:href="/orders">
-        주문내역조회
-      </button>
+      <a href="/orders/email" class="btn btn-dark">주문내역조회</a>
     </div>
 
     <div class="col-md-4 summary p-4">
