--- a/src/main/resources/templates/view_orderDetail.html
+++ b/src/main/resources/templates/view_orderDetail.html
@@ -116,7 +116,7 @@
            class="btn btn-dark">
           목록으로
         </a>
-        <a th:href="@{/orders/update/{orderId}(orderId=${orderId})}" class="btn btn-dark">주문 수정</a>
+        <a th:href="@{/orders/{orderId}/edit(orderId=${orderId})}" class="btn btn-dark">주문 수정</a>
         <a href="#" class="btn btn-dark">주문 취소</a>
       </div>
     </div>
