--- a/src/main/resources/templates/view_update_order.html
+++ b/src/main/resources/templates/view_update_order.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>주문 상세 조회</title>
+  <title>주문 내역 수정</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
@@ -15,7 +15,7 @@
 
     .card {
       margin: auto;
-      max-width: 1100px;
+      max-width: 950px;
       width: 90%;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.19);
       border-radius: 1rem;
@@ -38,7 +38,7 @@
       margin-left: 0.5rem;
     }
 
-    @media (max-width: 1200px) {
+    @media (max-width: 767px) {
       .summary {
         border-top-right-radius: unset;
         border-bottom-left-radius: 1rem;
@@ -48,10 +48,10 @@
 </head>
 <body class="container-fluid">
 <div class="row justify-content-center my-4">
-  <h1 class="text-center">주문 상세 조회</h1>
+  <h1 class="text-center">주문 내역 수정</h1>
 </div>
 
-<div class="card mb-4">
+<div class="card mb-4" data-order-id="${orderDetail.id}">
   <div class="row no-gutters">
     <div class="col-md-8 p-4">
       <h5><b>상품 목록</b></h5>
@@ -79,23 +79,28 @@
         </tfoot>
       </table>
 
-      <h5 class="mt-4"><b>배송 정보</b></h5>
+      <h5 class="mt-4"><b>배송지 수정</b></h5>
       <table class="table">
         <tbody>
         <tr>
-          <th>주소</th>
-          <td th:text="${orderDetail.address} ?: '-'">-</td>
+          <th>수정할 주소</th>
+          <td>
+            <input type="text" class="form-control" name="address"
+                   th:value="${orderDetail.address}" id="address">
+          </td>
         </tr>
         <tr>
-          <th>우편번호</th>
-          <td th:text="${orderDetail.zipcode} ?: '-'">-</td>
-        </tr>
-        <tr>
-          <th>주문 상태</th>
-          <td th:text="${orderDetail.orderStatus}">-</td>
+          <th>수정할 우편번호</th>
+          <td>
+            <input type="text" class="form-control" name="zipcode"
+                   th:value="${orderDetail.zipcode}" id="zipcode">
+          </td>
         </tr>
         </tbody>
       </table>
+      <div class="d-flex justify-content-end mt-3">
+        <button type="button" class="btn btn-dark" onclick="updateOrder()">주문 수정</button>
+      </div>
     </div>
 
     <div class="col-md-4 summary p-4 d-flex flex-column justify-content-between">
@@ -116,11 +121,11 @@
            class="btn btn-dark">
           목록으로
         </a>
-        <a th:href="@{/orders/{orderId}/edit(orderId=${orderId})}" class="btn btn-dark">주문 수정</a>
         <a href="#" class="btn btn-dark">주문 취소</a>
       </div>
     </div>
   </div>
 </div>
+<script src="/update_order.js"></script>
 </body>
 </html>
