:recycle: refactor : 불필요한 주석 삭제

--- a/src/main/resources/templates/view_orderDetail.html
+++ b/src/main/resources/templates/view_orderDetail.html
@@ -56,15 +56,15 @@
     }
 
     .order-status.PROCESSING {
-      background-color: #f0ad4e; /* 오렌지 */
+      background-color: #f0ad4e;
     }
 
     .order-status.COMPLETED {
-      background-color: #5cb85c; /* 녹색 */
+      background-color: #5cb85c;
     }
 
     .order-status.CANCELED {
-      background-color: #d9534f; /* 빨간 */
+      background-color: #d9534f;
     }
 
 
