[refactor]: 불필요한 클래스 삭제 및 리팩토링 (#27)
* :recycle: refactor : 불필요한 dto 삭제

* :sparkles: feat : 배송 상태 검증 Validator 작성

* :sparkles: refactor : 배송 상태 검증 메서드 validator로 책임 분리

* :sparkles: feat : 배송상태 css 추가

* :sparkles: feat : 배송상태 검증 로직 view에도 작성

* :recycle: refactor : 불필요한 주석 삭제

* :recycle: refactor : 테스트 위한 주석 처리 원상복구

* :sparkles: feat : 주문 취소시 주문 취소 성공 alert 작성

* :recycle: refactor : DTO 접근을 getter 메서드로 변경

* :recycle: refactor : 잘못된 exception 수정

* :recycle: refactor : 제품-> 상품으로 텍스트 변경

--- a/src/main/resources/templates/view_update_order.html
+++ b/src/main/resources/templates/view_update_order.html
@@ -52,30 +52,30 @@
 </div>
 
 <div class="card mb-4"
-     th:attr="data-order-id=${orderDetail.id}">
+     th:attr="data-order-id=${orderDetail.getId()}">
   <div class="row no-gutters">
     <div class="col-md-8 p-4">
       <h5><b>상품 목록</b></h5>
       <table class="table mt-3">
         <thead>
         <tr>
-          <th>제품</th>
+          <th>상품</th>
           <th>가격</th>
           <th>수량</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="prod : ${orderDetail.orderProducts}">
-          <td th:text="${prod.productName}">상품명</td>
-          <td th:text="${prod.price} + '원'">10000원</td>
-          <td th:text="${prod.quantity}">1</td>
+        <tr th:each="prod : ${orderDetail.getOrderProducts()}">
+          <td th:text="${prod.getProductName()}">상품명</td>
+          <td th:text="${prod.getPrice()} + '원'">10000원</td>
+          <td th:text="${prod.getQuantity()}">1</td>
         </tr>
         </tbody>
         <tfoot>
         <tr>
           <td><b>총합계</b></td>
-          <td th:text="${orderDetail.totalPrice} + '원'">20000원</td>
-          <td th:text="${orderDetail.totalQuantity}">2</td>
+          <td th:text="${orderDetail.getTotalPrice()} + '원'">20000원</td>
+          <td th:text="${orderDetail.getTotalQuantity()}">2</td>
         </tr>
         </tfoot>
       </table>
@@ -87,14 +87,14 @@
           <th>수정할 주소</th>
           <td>
             <input type="text" class="form-control" name="address"
-                   th:value="${orderDetail.address}" id="address">
+                   th:value="${orderDetail.getAddress()}" id="address">
           </td>
         </tr>
         <tr>
           <th>수정할 우편번호</th>
           <td>
             <input type="text" class="form-control" name="zipcode"
-                   th:value="${orderDetail.zipcode}" id="zipcode">
+                   th:value="${orderDetail.getZipcode()}" id="zipcode">
           </td>
         </tr>
         </tbody>
@@ -110,15 +110,15 @@
         <hr>
         <div class="mb-3">
           <strong>총 상품 수량:</strong>
-          <span th:text="${orderDetail.totalQuantity} + '개'">2개</span>
+          <span th:text="${orderDetail.getTotalQuantity()} + '개'">2개</span>
         </div>
         <div class="mb-3">
           <strong>총 금액:</strong>
-          <span th:text="${orderDetail.totalPrice} + '원'">20000원</span>
+          <span th:text="${orderDetail.getTotalPrice()} + '원'">20000원</span>
         </div>
       </div>
       <div class="btn-group text-end">
-        <a th:href="@{/orders/email(email=${orderDetail.email})}"
+        <a th:href="@{/orders/email(email=${orderDetail.getEmail()})}"
            class="btn btn-dark">
           목록으로
         </a>
