--- a/src/main/resources/templates/view_save_orders.html
+++ b/src/main/resources/templates/view_save_orders.html
@@ -91,6 +91,10 @@
       font-weight: bold;
     }
 
+    .li-hover:hover {
+      background-color: #f0f0f0;
+    }
+
   </style>
   <title>주문하기</title>
 </head>
@@ -104,7 +108,7 @@
       <h5 class="flex-grow-0"><b>상품 목록</b></h5>
       <ul class="list-group products mb-auto">
         <th:block th:each="product : ${products_list}">
-          <li class="list-group-item d-flex mt-3">
+          <li class="list-group-item d-flex mt-3 li-hover" th:onclick="|location.href='/admin/products/${product.productId}'|">
             <div class="col-2">
               <img class="img-fluid"
                    th:src="'data:' + ${product.imageType} + ';base64,' + ${product.imageBase64}"
@@ -119,7 +123,7 @@
             <div class="col text-end action">
               <a class="btn btn-small btn-outline-dark"
                  th:attr="product-id=${product.productId}, product-name=${product.productName}, product-price=${product.price}"
-                 onclick="addToCart(this)">
+                 onclick="event.stopPropagation(); addToCart(this)">
                 추가
               </a>
             </div>
