:sparkles: feat: 상세 정보에서 수정, 삭제 등의 버튼 숨기기, 사용자용 상세 정보 URL 수정

--- a/src/main/resources/templates/view_find_products.html
+++ b/src/main/resources/templates/view_find_products.html
@@ -108,12 +108,17 @@
     </tr>
   </table>
 
-  <div class="button-group">
+  <div class="button-group" th:if="${isAdmin}">
     <input type="hidden" id="productId" th:value="${product.id}" />
     <button type="button" th:onclick="|window.location.href='@{/admin/products/edit/{id}(id=${product.id})}'|">수정</button>
     <button type="button" id="deleteBtn" >삭제</button>
     <button type="button" th:onclick="|window.location.href='@{/admin/products/list}'|">목록으로</button>
   </div>
+
+  <div class="button-group" th:if="${not isAdmin}">
+    <button type="button" th:onclick="|window.location.href='@{/orders}'|">목록으로</button>
+  </div>
+
 </div>
 <script src="/find_products.js"></script>
 </body>
