:recycle: :refactor 관리자 주문 조회 1. Entity 수정 및 리팩토링 2. view_orders.html 페이징 처리
# Conflicts:
#	src/main/java/com/example/gridscircles/domain/order/service/OrdersService.java
#	src/test/java/com/example/gridscircles/domain/order/service/OrderServiceTests.java

# Conflicts:
#	src/main/java/com/example/gridscircles/domain/order/entity/Orders.java
#	src/main/java/com/example/gridscircles/domain/order/service/OrdersService.java
#	src/main/java/com/example/gridscircles/domain/product/controller/AdminProductController.java

--- a/src/main/resources/templates/admin/view_products.html
+++ b/src/main/resources/templates/admin/view_products.html
@@ -91,7 +91,7 @@
   <form th:action="@{/admin/products/list}" method="get">
     <input type="text" name="productId" placeholder="상품번호 입력">
     <button type="submit">검색</button>
-    <button type="button" th:onclick="|location.href='@{/admin/products}'|">상품 등록</button>
+    <button type="button" th:onclick="|location.href='@{/admin/products/new}'|">상품 등록</button>
     <button type="button" th:onclick="|location.href='@{/admin/orders/list}'|">주문 내역</button>
   </form>
 
