--- a/src/main/resources/templates/view_orders.html
+++ b/src/main/resources/templates/view_orders.html
@@ -180,7 +180,7 @@
 
   <div style="text-align: center;">
     <a th:if="${request == 'email'}" href="/orders/search" class="button">돌아가기</a>
-    <a th:if="${request == 'id'}" href="javascript:history.back()" class="button">돌아가기</a>
+    <a th:if="${request == 'id'}" th:href="@{/orders/email(email=${email})}" class="button">돌아가기</a>
   </div>
 </div>
 </body>
