--- a/src/main/resources/templates/view_find_products.html
+++ b/src/main/resources/templates/view_find_products.html
@@ -5,7 +5,7 @@
   <title>상품 상세 조회 - 관리자</title>
   <style>
     body {
-      background-color: #f2f2f2;
+      background-color: #f8f9fa;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 50px 0;
