--- a/src/main/resources/templates/view_save_products.html
+++ b/src/main/resources/templates/view_save_products.html
@@ -5,7 +5,7 @@
   <title>상품 등록</title>
   <style>
     body {
-      background-color: #f2f2f2;  /* 완전 밝은 회색 */
+      background-color: #f8f9fa;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 50px 0;
@@ -14,9 +14,9 @@
     .form-wrapper {
       width: 600px;
       margin: 0 auto;
-      background-color: white;  /* 하얀색 네모 박스 */
+      background-color: white;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 살짝 그림자 */
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       padding: 30px;
     }
 
