:recycle: refactor: 백그라운드 컬러 변경 및 주문 상태에 따른 주문 취소 버튼, 수정 버튼 안보이도록 수정

--- a/src/main/resources/templates/view_orderDetail.html
+++ b/src/main/resources/templates/view_orderDetail.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous">
   <style>
     body {
-      background: #ddd;
+      background: #f8f9fa;
     }
 
     .card {
@@ -145,16 +145,24 @@
            class="btn btn-dark">
           목록으로
         </a>
-        <a th:href="@{/orders/{orderId}/edit(orderId=${orderDetail.getId()})}" class="btn btn-dark">주문
-          수정</a>
-        <button type="button"
-                class="btn btn-dark"
-                onclick="cancelOrder()">
+
+        <a th:if="${orderDetail.getEditable()}"
+           th:href="@{/orders/{orderId}/edit(orderId=${orderDetail.getId()})}"
+           class="btn btn-dark">
+          주문 수정
+        </a>
+
+        <button
+            type="button"
+            class="btn btn-dark"
+            onclick="cancelOrder()"
+            th:if="${orderDetail.getEditable()}">
           주문 취소
         </button>
       </div>
     </div>
   </div>
+</div>
 </div>
 <script src="/cancel.js"></script>
 </body>
