--- a/src/main/resources/templates/view_update_order.html
+++ b/src/main/resources/templates/view_update_order.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous">
   <style>
     body {
-      background: #ddd;
+      background: #f8f9fa;
     }
 
     .card {
@@ -122,12 +122,22 @@
            class="btn btn-dark">
           목록으로
         </a>
-        <button type="button"
-                class="btn btn-dark"
-                onclick="cancelOrder()">
+
+        <a th:if="${orderDetail.getEditable()}"
+           th:href="@{/orders/{orderId}/edit(orderId=${orderDetail.getId()})}"
+           class="btn btn-dark">
+          주문 수정
+        </a>
+
+        <button
+            type="button"
+            class="btn btn-dark"
+            onclick="cancelOrder()"
+            th:if="${orderDetail.getEditable()}">
           주문 취소
         </button>
       </div>
+
     </div>
   </div>
 </div>
