--- a/src/main/resources/templates/view_orders.html
+++ b/src/main/resources/templates/view_orders.html
@@ -110,7 +110,7 @@
 <div class="container">
   <h1 th:text="${email != null} ? ${email} + '님의 주문 내역' : '주문 내역'">주문 내역</h1>
 
-  <form class="search-form" th:action="@{/orders/id}" method="get">
+  <form class="search-form" th:action="@{/orders/orderId}" method="get">
     <input type="number" name="orderId" placeholder="주문 ID" required>
     <input type="hidden" name="email" th:value="${email}"/>
     <button type="submit">조회</button>
@@ -180,7 +180,7 @@
 
   <div style="text-align: center;">
     <a th:if="${request == 'email'}" href="/orders/search" class="button">돌아가기</a>
-    <a th:if="${request == 'id'}" href="javascript:history.back()" class="button">돌아가기</a>
+    <a th:if="${request == 'id'}" th:href="@{/orders/email(email=${email})}" class="button">돌아가기</a>
   </div>
 </div>
 </body>
